k3s/owncloud/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
        name: owncloud
    spec:
      containers:
        - name: owncloud
          image: owncloud/server
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          ports:
            - name: owncloud
              containerPort: 8080
          volumeMounts:
            - name: owncloud-storage
              mountPath: /mnt/data/
      volumes:
        - name: owncloud-storage
          persistentVolumeClaim:
            claimName: owncloud-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: owncloud
spec:
  selector:
    app: owncloud
  type: LoadBalancer
  ports:
    - name: owncloud
      port: 8080
      targetPort: 8080
