k3s/owncloud/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud
  namespace: owncloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - secretName: cert-apcode.com.br
  rules:
    - host: owncloud.apcode.com.br
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: owncloud
                port:
                  name: owncloud
